--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "next start",
         "lint": "next lint",
         "format": "prettier --write .",
-        "prepare": "husky"
+        "prepare": "husky install"
     },
     "dependencies": {
         "@clerk/nextjs": "^5.3.2",
