--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@clerk/nextjs": "^5.3.2",
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.9.0",
-        "@prisma/client": "^5.18.0",
+        "@prisma/client": "^6.5.0",
         "@radix-ui/react-accordion": "^1.2.0",
         "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -49,15 +49,16 @@
         "cmdk": "1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.2.0",
+        "framer-motion": "^12.6.0",
         "input-otp": "^1.2.4",
         "lucide-react": "^0.428.0",
         "next": "^15.0.0-rc.0",
         "next-themes": "^0.3.0",
-        "prisma": "^5.18.0",
         "react": "^19.0.0-rc-a960b92c-20240819",
         "react-day-picker": "8.10.1",
         "react-dom": "^19.0.0-rc-a960b92c-20240819",
         "react-hook-form": "^7.52.2",
+        "react-icons": "^5.5.0",
         "react-redux": "^9.1.2",
         "react-resizable-panels": "^2.1.0",
         "recharts": "^2.12.7",
@@ -78,6 +79,7 @@
         "husky": "^9.1.5",
         "postcss": "^8",
         "prettier": "^3.3.3",
+        "prisma": "^6.5.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     },
